[package]
name = "doubletap-rl"
version = "0.1.0"
edition = "2021"
description = "Auto-clicker for Rocket League double-tap aerials"
license = "MIT"
repository = "https://github.com/enXov/doubletap-rl"
keywords = ["rocket-league", "auto-clicker", "linux", "gaming"]
categories = ["games"]

[dependencies]
# Input listening (global mouse events via evdev)
rdev = "0.5"

# Error handling
thiserror = "2"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Ctrl+C handler for graceful shutdown
ctrlc = "3.4"

# X11 window focus detection (works with XWayland)
x11rb = "0.13"

# Virtual input device creation via uinput
evdev = "0.12"

# Raw system calls for uinput writes
libc = "0.2"
